--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,9 +26,10 @@ init:
   - set PATH=C:\Program Files\MySQL\MySQL Server 5.7\bin;%PATH%
   - set MYSQL_PWD=Password12!
   - nuget install redis-64 -excludeversion
-  - redis-64\tools\redis-server.exe --service-install
-  - redis-64\tools\redis-server.exe --service-start --port 6379 --requirepass "randomredis"
-  - redis-64\tools\redis-server.exe --service-start --port 6380 --requirepass "randomredis
+  - redis-64\tools\redis-server.exe --service-install --service-name redis1 --port 6379 --requirepass "randomredis"
+  - redis-64\tools\redis-server.exe --service-start --service-name redis1
+  - redis-64\tools\redis-server.exe --service-install --service-name redis2 --port 6380 --requirepass "randomredis"
+  - redis-64\tools\redis-server.exe --service-start --service-name redis2
   - ps: >-
         InstallPeclExtension `
           -Name       redis `
