--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -94,6 +94,10 @@ jobs:
       - name: "Tests"
         if: env.CODE_COVERAGE == 'n'
         run: php ./concrete/vendor/phpunit/phpunit/phpunit
+        # Since continue on error still marks a build as failed.
+        # We also have to add continue-on-error here
+        # see https://github.com/actions/toolkit/issues/399
+        continue-on-error: ${{ matrix.php-version == '8.1' }}
 
       - name: "Tests with coverage"
         if: env.CODE_COVERAGE == 'y'
@@ -104,6 +108,3 @@ jobs:
         run: |
           wget --tries=5 https://scrutinizer-ci.com/ocular.phar
           php ocular.phar code-coverage:upload --format=php-clover coverage.clover
-      - name: "Ignore Results"
-        if: ${{ failure() && matrix.php-version == '8.1' }}
-        run: exit 0;
